discussion/kv_engine/177065/177065_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: FCManager API takes not-null DcpConsumer*

Change-Id: I12a05d2ad22dedec2fe82a5027eea4be0d5546d8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-05 14:14:39.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 19:24:58.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18710/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:23:29: error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::newConsumer(gsl::not_null<DcpConsumer*> consumer) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:35:29: error: out-of-line definition of "handleDisconnect" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::handleDisconnect(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: expected parameter declarator [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:50: error: expected ")" [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:21: note: to match this "("
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: expected parameter declarator [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:55: error: expected ")" [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:26: note: to match this "("
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18710/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:23:29:
error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18710/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39902/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22:
error: use of undeclared identifier "gsl"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39902/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19834/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [158/160]: test sync write timeout...../kv_engine/engines/ep/tests/ep_testsuite.cc:8393 Test failed: `" (Expected `would block", got `success" - durable add failed)
[2022-07-05T19:00:51.300Z] (410 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19834/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21613/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithValue/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithValue/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
[2022-07-05T17:23:28.679Z] unknown file: Failure
[2022-07-05T17:23:28.679Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck not a buffer ack opcode request:{"bodylen":30,"cas":0,"datatype":"raw","extlen":0,"key":"<ud>connection_buffer_size</ud>","keylen":22,"magic":"ClientRequest","opaque":14,"opcode":"DCP_CONTROL","vbucket":0}" thrown in the test body.
[2022-07-05T17:23:28.679Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithValue/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (1055 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithValue/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21613/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28989/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferNo":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferNo
[2022-07-05T17:09:29.026Z] unknown file: Failure
[2022-07-05T17:09:29.026Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response" thrown in the test body.
[2022-07-05T17:09:29.026Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferNo, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>, 4-byte object <01-00 00-00>) (2017 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonYes_SnappyNo_AlwaysBufferNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28989/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17867/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8391/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20956/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20602/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8490/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
